# rusty-mastodon

api/: Cargo.toml  _lib.rs  mastodon-instances.rs
public/: index.html
public/assets/: config.json
