[package]
name = "rusty-mastodon"
version = "1.0.0"
authors = [ "Olle Wreede <olle@agical.se>" ]
edition = "2021"

[dependencies]
http = "0.1"
nanoserde = "0.1.32"
vercel_lambda = "*"

  [dependencies.reqwest]
  version = "0.11"
  features = [ "blocking" ]

[lib]
name = "librustymastodon"
path = "_lib.rs"

[[bin]]
name = "mastodon-instances"
path = "/Users/olle/Development/mine/rusty-mastodon/api/mastodon-instances.rs"
